--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <body>
     <div class="header">
         <div class="header-content">
-	    <img src="images/spoga.png" alt="spoga">
+	   
             <img src="images/LOGO PNG.png" alt="GLOBAL BASE SOURCING LIMITED">
             
             <!-- Add more images as needed -->
@@ -147,18 +147,18 @@
                 </tr>
                 <tr>
                     <th>Product Material</th>
-                    <td>"Iron
-Sheet Gauge-0.37 mm"</td>
+                    <td>Iron
+Sheet Gauge-0.37 mm</td>
                 </tr>
                 <tr>
                     <th>Product Size</th>
-                    <td><br>Dia. 14cm x Height 14cm</br>
+                    <td><br>Dia-14cm x Height-14cm</br>
 
 </td>
                 </tr>
                 <tr>
-                    <th>Product CBM</th>
-                    <td>
+                    <th>MOQ</th>
+                    <td>193184</td>
                 </tr>
                 <tr>
                     <th>Product Weight</th>
@@ -166,7 +166,7 @@ Sheet Gauge-0.37 mm"</td>
                 </tr>
                 <tr>
                     <th>Unit</th>
-                    <td>pcs</td>
+                    <td>Pcs</td>
                 </tr>
                 <tr>
                     <th>Carton Size</th>
@@ -181,28 +181,28 @@ Sheet Gauge-0.37 mm"</td>
                     <td>0.006</td>
                 </tr>
                 <tr>
-                    <th>20 Ft Container Carton Quantity</th>
-                    <td>79545 Carton</td>
+                    <th>20 Ft Container Quantity</th>
+                    <td>79552 </td>
                 </tr>
                 <tr>
-                    <th>40 Ft Container Carton Quantity</th>
-                    <td>170455 Carton</td>
+                    <th>40 Ft Container Quantity</th>
+                    <td>170448 </td>
                 </tr>
                 <tr>
-                    <th>40 HQ Container Carton Quantity</th>
-                    <td>193182 Carton</td>
+                    <th>40 HQ Container Quantity</th>
+                    <td>193184 </td>
                 </tr>
                 <tr>
                     <th>Price</th>
-                    <td><button class="link-button" id="myBtn">Show Price</button></td>
+                    <td>USD 1.70</td>
                 </tr>
                 <tr>
                     <th>FOB Port</th>
                     <td>Mundra, India</td>
                 </tr>
                 <tr>
-                    <th>More Details - Packaging PPT</th>
-                    <td><button class="link-button" onclick="window.location.href='Link';"> </button></td>
+                    <th>Other Details </th>
+                    <td>Bulk Packed, Base Label</td>
                 </tr>
             </table>
         </div>
