--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Sheet Gauge-0.37 mm</td>
                 </tr>
                 <tr>
                     <th>Product Size</th>
-                    <td><br>Dia-14cm x Height-14cm</br>
+                    <td>>Dia-14cm x Height-14cm</br>
 
 </td>
                 </tr>
